--- a/ETL/ETL1/ETL1.ipynb
+++ b/ETL/ETL1/ETL1.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,22 +231,137 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generar modelo y tablas de la Base de Datos\n"
+    "### Informacion de la base de datos\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El modelo que se generara sera modelo estrella. "
+    "La base de datos esta en modelo estrella como eje central se encuentra la tabla la tabla Shows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Show_id', 'Title', 'Country', 'Rating', 'Director', 'Cast_id', 'Type_show_id', 'Caracteristic_id', 'Date_show_added_id', 'Date_show_release_id']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"SELECT * FROM Shows\")\n",
+    "columnas = [descripcion[0] for descripcion in cursor.description]\n",
+    "print(columnas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "y las tablas que la rodean y conformar la forma de estra son Casts, date_shows_added, Caracteristics, Date_show_release,Type_Show. \n",
+    "*La duracion se descarto de la tabla que en este caso se estan evaluando peliculas y series, donde las series se miden en temporadas y las peliculas en minutos y al no conocer el tiempo por capitulos o capitulos por temporadas no se puede controlar la columna y generar data de valor para este modelo en especifico, en otro modelo de BD es una columna con mucho valor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Date_show_added_id', 'Fecha', 'Year_added', 'Month_added', 'Day_added']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"SELECT * FROM Date_show_added\")\n",
+    "columnas = [descripcion[0] for descripcion in cursor.description]\n",
+    "print(columnas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Caracteristic_id', 'Listen_id', 'Description_caract']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"SELECT * FROM Caracteristics\")\n",
+    "columnas = [descripcion[0] for descripcion in cursor.description]\n",
+    "print(columnas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Date_show_release_id', 'Year_release']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"SELECT * FROM Date_show_release\")\n",
+    "columnas = [descripcion[0] for descripcion in cursor.description]\n",
+    "print(columnas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Cast_id', 'Name_cast']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"SELECT * FROM casts\")\n",
+    "columnas = [descripcion[0] for descripcion in cursor.description]\n",
+    "print(columnas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Type_show_id', 'Type_show']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"SELECT * FROM type_show\")\n",
+    "columnas = [descripcion[0] for descripcion in cursor.description]\n",
+    "print(columnas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +563,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +590,7 @@
        "(8807, 12)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -524,6 +639,87 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Realizaremos control de datos nulos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "show_id            0\n",
+       "type               0\n",
+       "title              0\n",
+       "director        2634\n",
+       "cast             825\n",
+       "country          831\n",
+       "date_added        10\n",
+       "release_year       0\n",
+       "rating             4\n",
+       "duration           3\n",
+       "listed_in          0\n",
+       "description        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como se indico no se contara con la columna Duration.\n",
+    "Primero se generara una variable de trabajo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df1.drop('duration', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En el caso de los directores, se asignaran los valores nullos con 'desconocido'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1['director'].fillna('Desconocido', inplace=True)"
    ]
   }
  ],
