--- a/ETL/ETL1/ETL1.ipynb
+++ b/ETL/ETL1/ETL1.ipynb
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
        "Name: date_added, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -890,14 +890,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La tabla Date contara desde la fecha 2008-1-1"
+    "Como se puede apreciar en el llamdo head de la columna se nos indica que el formato es datetime64[ns] por lo cual al insertarlo a la BD se generara error, para esto se realizara modificacion del tipo de dato"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2['date_added'] = df2['date_added'].dt.date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df2['date_added'].dtypes)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Con los valores ya procesados podemos realizar la carga a OLAP"
+    "La tabla Date contara desde la fecha 2008-1-1\\\n",
+    "Ahora pasaremos a la fase de agrupacion"
    ]
   },
   {
@@ -912,6 +939,13 @@
    "metadata": {},
    "source": [
     "En esta subseccion agruparemos los datos segun la tabla en la que se cargaran"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con los valores ya procesados y agrupados podemos realizar la carga a OLAP"
    ]
   },
   {
