--- a/ETL/ETL1/ETL1.ipynb
+++ b/ETL/ETL1/ETL1.ipynb
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -945,6 +945,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Agrupamos la columna para la tabla de cast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_casts = df2['cast']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_cats=df_casts.tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora para los datos que van a la tabla date_show_release"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dsr = df2['release_year']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_dsr=df_dsr.tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agrupacion de datos para tabla Type_show"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_show = df2['type']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_show=df_show.tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para tabla de caracteristics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_carct = df2[['listed_in', 'description']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_caract = df_carct.values.tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por ultimo para la tabla shows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_shows = df2[['title','country','rating','director']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_shows = df_shows.values.tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Con los valores ya procesados y agrupados podemos realizar la carga a OLAP"
    ]
   },
@@ -954,6 +1079,52 @@
    "source": [
     "## Carga de datos"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este puntomrealizaremos la carga de los datos en la base de datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las listas de datos para cargar en las tablas son:\n",
+    "- lista_shows\n",
+    "- lista_caract\n",
+    "- lista_show\n",
+    "- lista_dsr\n",
+    "- lista_cats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consulta SQL corregida, reemplaza 'NombreDeLaTabla' con el nombre real de tu tabla\n",
+    "consulta_sql = 'INSERT INTO Type_show (Type_show) VALUES (?)'\n",
+    "\n",
+    "# Asegurándose de que lista_cats sea una lista de tuplas\n",
+    "lista_show_ajustada = [(val,) for val in lista_show]\n",
+    "\n",
+    "# Ahora puedes usar execuetemany con lista_cats_ajustada\n",
+    "cursor.executemany(consulta_sql,  lista_show_ajustada)\n",
+    "\n",
+    "# Guardar y cerrar\n",
+    "conn.commit()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
